--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-pdf",
+  "name": "@meroguru/react-pdf",
   "version": "9.2.1",
   "description": "Display PDFs in your React app as easily as if they were images.",
   "type": "module",
@@ -57,7 +57,7 @@
     "make-cancellable-promise": "^1.3.1",
     "make-event-props": "^1.6.0",
     "merge-refs": "^1.3.0",
-    "pdfjs-dist": "4.8.69",
+    "pdfjs-dist": "^5.0.375",
     "tiny-invariant": "^1.0.0",
     "warning": "^4.0.0"
   },
@@ -100,7 +100,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wojtekmaj/react-pdf.git",
+    "url": "git+https://github.com/Meroguru/react-pdf.git",
     "directory": "packages/react-pdf"
   },
   "funding": "https://github.com/wojtekmaj/react-pdf?sponsor=1"
